strictasm_diff_ossfuzz_seed_corpus/test_yul/builtin_function_literal_valid.yul
{
  datasize(1)
}
// ----
// DeclarationError 8198: (13-14): Identifier not found.
